# StackAbusePC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CC-PC/: CMakeLists.txt
CC-PC/CC-PC/: CC-PC.cpp  CC-PC.h  CMakeLists.txt  usb-comm.cpp  usb-comm.hpp
CC-PC/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.hpp
StackAbuseImHex/: CMakeLists.txt
StackAbuseImHex/source/: StackAbuse.cpp  usb_comm.cpp  usb_comm.hpp
StackAbuseNX/: .clang-format  .gitmodules  CppProperties.json  Makefile  README.md  cc_switch_sysmod.lst
StackAbuseNX/cc_switch_sysmod/: Makefile  cc_switch_sysmod.json
StackAbuseNX/cc_switch_sysmod/source/: app.cpp  app.hpp  main.cpp
StackAbuseNX/cc_switch_sysmod/source/Shak/: PcTalk.cpp  PcTalk.hpp  args.cpp  commands.cpp  commands.hpp  util.cpp  util.hpp
StackAbuseNX/cc_switch_sysmod/source/Shak2/: Shak2.cpp  Shak2.hpp
StackAbuseNX/cc_switch_sysmod/source/input/: controller.cpp  input.hpp
StackAbuseNX/cc_switch_sysmod/source/mem/: mem.cpp  mem.hpp
StackAbuseNX/cc_switch_sysmod/source/usb_cc/: cc_rpc_types.hpp  cc_types.hpp  usb_cc.cpp  usb_cc.hpp
source/: libusb.h  mainloop.cpp  plugin_example.cpp  shak.cpp  shak.hpp
